# slide-cut

./: .gitignore  LICENSE  README.ko.md  README.md  THIRD_PARTY_NOTICES.md  app.js  index.html  main.js  package-lock.json  package.json  preload.js  project-model.js  rendering.js  styles.css
.github/workflows/: release.yml
assets/fonts/licenses/: OFL-Hakgyoansim-Bombanghak.txt  OFL-Mona12.txt  SOURCES.md
scripts/: package-release.sh
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: git.rs  main.rs  project_store.rs  translation.rs  video_export.rs
