[package]
name = "slide-cut"
version = "1.0.0"
description = "A small desktop slide compositor for arranging images, text, and simple vector-like marks."
authors = ["seungjae"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22.1"
hex = "0.4.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10.9"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
